chore: add JWT & user login api
